--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-          <img src="Logo.png" alt="">
+          <img src="Logo (7).png" alt="">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Service</a></li>
